syntax = "proto3";


package profile;


option go_package = "github.com/DENFNC/Zappy/user_service/proto/gen/v1;v1";


import "google/protobuf/timestamp.proto";


message FullName {
    string first_name = 1;
    string last_name = 2;
}


message ProfileDefault {
    int64 id = 1;
    FullName user = 2;
    repeated string avatar_url = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}


message ProfileRequest {
    uint64 id = 1;
}


message ProfileResponse {
    ProfileDefault profile = 1;
}


message UpdateProfileRequest {
    FullName user = 1;
    string avatar_url = 2;
}


message UpdateProfileResponse {
    string message = 1;
}


message DeleteProfileRequest {
    uint64 id = 1;
}


message DeleteProfileResponse {
    string message = 1;
}


service Profile {
    rpc GetProfile(ProfileRequest) returns (ProfileResponse) {}
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}